trivial code improvements